# speaknow

./: LICENSE  README.md  logging.conf  pyproject.toml  requirements.txt  speaknow.py  speaknow_serve.py
ai_realtime_text_to_speech_gui/: app_css.py  config.py  config_css.py  directories.py  utils.py  widgets.py
speaknow_ai_realtime_text_to_speech/: app_css.py  audio_util.py  config.py  config_css.py  directories.py  utils.py  widgets.py
speaknow_ai_realtime_text_to_speech/ai_services/: __init__.py  base.py  google_gemini_flash_audio.py  openai_gpt_realtime.py  prices.py  xai_grok_voice.py
